@@ -1,1 +1,8 @@
 # Planner_Project
+Для запуска проекта в Intelijidea нужно лишь установить Run Application.
+
+Run Application: Application;
+Run on: Local machine;
+VM options: --module-path "lib/javafx-sdk-18/lib" --add-modules javafx.controls,javafx.fxml
+
+Main class: MainPage
